<resources>
    <string name="app_name">Aashwast Plus</string>
    <string name="splash_image">splash</string>
    <string name="language">Language</string>
    <string name="languageDescription">Choose your preferred language</string>
    <string name="languageDescription2">to continue</string>
    <string name="english">English</string>
    <string name="welcome">Welcome to Aashwast Plus</string>
    <string name="welcome_sub">Let\'s begin by introducing you to the key features of this app</string>
    <string name="on_boarding_heading_one">Accompanied Visits</string>
    <string name="on_boarding_heading_one_sub">Aashwast Mitra can accompany you to your doctor\'s appointment</string>
    <string name="on_boarding_heading_two_sub">Book doctor or physio home visits, sample collection, and more..</string>
    <string name="on_boarding_heading_three_sub">Receive urgent medical attention and ambulance support</string>
    <string name="on_boarding_heading_two">Home Services</string>
    <string name="on_boarding_heading_three">Emergencies</string>
    <string name="emergency_header">Emergency Button</string>
    <string name="emergency_sub">This is how you can trigger the emergency button</string>
    <string name="slide_for_emergency">Slide for Medical Emergency</string>
    <string name="welldone">Well Done!</string>
    <string name="welldone_sub">Please note that the emergency button will be found at the bottom of the app</string>
    <string name="login">Login</string>
    <string name="login_sub">Enter your name and mobile number</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile Number</string>
    <string name="otp">OTP</string>
    <string name="login_successfull">Login successful</string>
    <string name="login_msg">You have logged in</string>
    <string name="perosnal">Personal Details</string>
    <string name="pers_sub"><![CDATA[Enter your date of birth & address]]></string>
    <string name="dob">Date of birth*</string>
    <string name="resd">Residential Address*</string>
    <string name="city">City*</string>
    <string name="pincode">Pincode*</string>
    <string name="blood">Blood Group</string>
    <string name="blood_sub">Select your blood group</string>
    <string name="medical">Medical Details</string>
    <string name="medical_sub">Enter details below</string>
    <string name="alergies">Allergies</string>
    <string name="alergies_sub">Enter details below</string>
    <string name="emergency_contact">Emergency Contacts</string>
    <string name="emergency_contact_sub">You can enter details manually or import from your contact list.</string>
    <string name="medical_header">Do you have any chronic diseases?*</string>
    <string name="alergy_header">Do you have any allergies?*</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ifyes">If yes, please mention below</string>
    <string name="op">O +ve</string>
    <string name="on">O -ve</string>
    <string name="ap">A +ve</string>
    <string name="an">A -ve</string>
    <string name="bp">B +ve</string>
    <string name="bn">B -ve</string>
    <string name="abp">AB +ve</string>
    <string name="abn">AB -ve</string>
    <string name="tvContact1">Contact 1*</string>
    <string name="tvContact2">Contact 2</string>
    <string name="tvContact3">Contact 3</string>
    <string name="profile_saved">Profile Created</string>
    <string name="profile_saved_sub">You will now be taken to the  main page of the app</string>
    <string name="doc_visit">Nitin K will assist you to your doctor’s appointment</string>
    <string name="doc_time">19 April   |  10:30 am</string>
    <string name="doc_app">Accompanied Visits</string>
    <string name="app_des">Arrange doctor appointments accompanied by a companion</string>
    <string name="heath_Att">Hospital Attendant</string>
    <string name="healt_des">Our partner will remain by your side throughout hospitalisation</string>
    <string name="doc_home_visit">Doctor  Home Visit</string>
    <string name="physio_visit">Physio Home Visit</string>
    <string name="home_car">Home  Caregivers</string>
    <string name="smaple_collect">Sample Collection</string>
    <string name="wheelChair">Wheel Chair</string>
    <string name="beds">Beds</string>
    <string name="oxyxen">Oxygen</string>
    <string name="slide_text">Use button in case of a medical emergency</string>
    <string name="calling">Calling Aashwast</string>
    <string name="callingSpeaker">Your speaker phone has been turned on</string>
    <string name="invalid_mobile">Invalid mobile number, check again</string>
    <string name="hello">Hello Ramesh!</string>
    <string name="amb_arri">Ambulance has been dispatched and will arrive shortly</string>
    <string name="amb_arrives_in">Arriving in 15 min</string>
    <string name="marathi">Marathi</string>
    <string name="amublance_arraiving">Ambulance is arriving in</string>
    <string name="mins">15 min</string>
    <string name="text_paramedics">Paramedics: Nandan K, Swapnil</string>
    <string name="upon_evalution">Upon evaluation, you will be transferred to the closest hospital if necessary</string>
    <string name="emergency_alert">Your emergency contacts have been alerted</string>
    <string name="call_paramedic">Call Paramedic</string>
    <string name="book_home">Book at Home Services</string>
    <string name="rent">Rent Medical Supplies</string>
    <string name="book_Companion">Book Companion Services</string>

</resources>