<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AllergiesActivity">

    <TextView
        android:id="@+id/tvTwoHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/alergies"
        android:textColor="@color/lightBlack"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTwoSub"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:maxLines="2"
        android:text="@string/alergies_sub"
        android:textColor="@color/lightBlack"
        android:textSize="18sp"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTwoHeader" />


    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:maxLines="2"
        android:text="@string/alergy_header"
        android:textColor="@color/lightBlack"
        android:textSize="18sp"
        android:lineSpacingExtra="3dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTwoSub" />


    <TextView
        android:id="@+id/tvYes"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:maxLines="2"
        android:text="@string/yes"
        android:textColor="@color/lightBlack"
        android:textSize="18sp"
        android:lineSpacingExtra="3dp"
        android:layout_marginStart="20dp"
        android:gravity="center"
        android:inputType="text"
        android:background="@drawable/edit_text_back_ground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHeader" />

    <TextView
        android:id="@+id/tvNo"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@drawable/edit_text_back_ground"
        android:layout_marginTop="10dp"
        android:maxLines="2"
        android:text="@string/no"
        android:gravity="center"
        android:textColor="@color/lightBlack"
        android:textSize="18sp"
        android:lineSpacingExtra="3dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHeader" />


    <TextView
        android:id="@+id/tvIfYes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/ifyes"
        android:textColor="@color/lightBlack"
        android:textSize="18sp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tvNo"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/etRes"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="5dp"
        android:gravity="start"
        app:layout_constraintTop_toBottomOf="@+id/tvIfYes"
        android:background="@drawable/edit_text_back_ground"/>


    <TextView
        android:id="@+id/btnThreeGoBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/go_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>