<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/tvTwoHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/login"
        android:textColor="@color/lightBlack"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTwoSub"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:maxLines="2"
        android:text="@string/login_sub"
        android:textColor="@color/lightBlack"
        android:textSize="18sp"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTwoHeader" />


    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/name"
        android:textColor="@color/lightBlack"
        android:textSize="14sp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tvTwoSub"
        app:layout_constraintStart_toStartOf="parent"
        />


    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="5dp"
        app:layout_constraintTop_toBottomOf="@+id/tvName"
        android:background="@drawable/edit_text_background_dr"/>


    <TextView
        android:id="@+id/tvMobileNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/mobile"
        android:textColor="@color/lightBlack"
        android:textSize="14sp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@+id/etName"
        app:layout_constraintStart_toStartOf="parent"
        />


    <EditText
        android:id="@+id/etMobile"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:paddingStart="5dp"
        android:maxLength="10"
        android:inputType="number"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tvMobileNumber"
        android:background="@drawable/edit_text_background_dr"/>

    <TextView
        android:id="@+id/tvInavlidMobileNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/invalid_mobile"
        android:textColor="@color/red"
        android:visibility="gone"
        android:textSize="14sp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@+id/etMobile"
        app:layout_constraintStart_toStartOf="parent"
        />







    <TextView
        android:id="@+id/btnThreeGoBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/go_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ProgressBar
        android:id="@+id/ccProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>