<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PersonalDetailsActivity">


    <TextView
        android:id="@+id/tvTwoHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/perosnal"
        android:textColor="@color/lightBlack"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvOtpText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:maxLines="2"
        android:textColor="@color/lightBlack"
        android:textSize="18sp"
        android:gravity="center_horizontal"
        android:text="@string/pers_sub"
        android:lineSpacingExtra="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTwoHeader" />

    <TextView
        android:id="@+id/tvDob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/dob"
        android:textColor="@color/lightBlack"
        android:textSize="14sp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tvOtpText"
        app:layout_constraintStart_toStartOf="parent"
        />


    <Spinner
        android:id="@+id/spinnerDay"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_back_ground"
        app:layout_constraintTop_toBottomOf="@id/tvDob"/>

    <Spinner
        android:id="@+id/spinnerMonth"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/edit_text_back_ground"
        app:layout_constraintTop_toBottomOf="@id/spinnerDay"/>

    <Spinner
        android:id="@+id/spinnerYear"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_back_ground"
        app:layout_constraintTop_toBottomOf="@id/spinnerMonth" />

    <TextView
        android:id="@+id/tvRes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/resd"
        android:textColor="@color/lightBlack"
        android:textSize="14sp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@+id/spinnerYear"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/etRes"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="5dp"
        app:layout_constraintTop_toBottomOf="@+id/tvRes"
        android:background="@drawable/edit_text_back_ground"/>

    <TextView
        android:id="@+id/tvCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/city"
        android:textColor="@color/lightBlack"
        android:textSize="14sp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@+id/etRes"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/etCity"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCity"
        android:background="@drawable/edit_text_back_ground"/>

    <TextView
        android:id="@+id/tvPinCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/pincode"
        android:textColor="@color/lightBlack"
        android:textSize="14sp"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/etRes"
        app:layout_constraintStart_toStartOf="@id/etPinCode"
        />

    <EditText
        android:id="@+id/etPinCode"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="5dp"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCity"
        android:background="@drawable/edit_text_back_ground"/>

    <TextView
        android:id="@+id/btnThreeGoBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/go_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>